# fcitx-configtool-wizard

./: CMakeLists.txt  intropage.cpp  intropage.h  main.cpp  mainwizard.cpp  mainwizard.h
youker-assistant/: fcitxcfgwizard.cpp  fcitxcfgwizard.h  src.pro
